--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
         .nav-items li a{
             font-family: 'Roboto', sans-serif;
             text-decoration: none;
+            color: white;
         }
+        .nav-items li a.active-page{
+            background-color: #59AAA3;
+            color: #231F20;
+        }
+
         .nav-links{
             /* align-self: flex-end; */
             color: whitesmoke;
@@ -218,10 +224,10 @@
 
         <div class="navbar">
             <ul class="nav-items">
-                <li><a href="./index.html" class="nav-links">About Me</a></li>
-                    <li><a href="./projects.html" class="nav-links">Projects</a></li>
-                    <li><a href="./contact.html" class="nav-links">Contact</a></li>
-                    <li><a href="./blog.html" class="nav-links">Blog</a></li>
+                <li class="nav-links"><a href="./index.html" class='active-page' >About Me</a></li>
+                <li class="nav-links"><a href="./projects.html" >Projects</a></li>
+                <li class="nav-links"><a href="./contact.html">Contact</a></li>
+                <li class="nav-links"><a href="./blog.html" >Blog</a></li>
             </ul>
         </div>
 
