--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         .navbar{
             grid-area: header;
-            background-color: black;
+            background-color: #404253;
         }
 
         /* .content-box{
@@ -36,7 +36,7 @@
         } */
         .footer-box{
             grid-area: footer;
-            background-color:black;
+            background-color: #404253;
         }
 
         .nav-items{
@@ -225,9 +225,9 @@
         <div class="navbar">
             <ul class="nav-items">
                 <li class="nav-links"><a href="./index.html" class='active-page' >About Me</a></li>
-                <li class="nav-links"><a href="./projects.html" >Projects</a></li>
-                <li class="nav-links"><a href="./contact.html">Contact</a></li>
-                <li class="nav-links"><a href="./blog.html" >Blog</a></li>
+                <li class="nav-links"><a href="./pages/projects.html" >Projects</a></li>
+                <li class="nav-links"><a href="./pages/contact.html">Contact</a></li>
+                <li class="nav-links"><a href="./pages/blog.html" >Blog</a></li>
             </ul>
         </div>
 
