--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
+    <link rel="stylesheet" href="../style.css">
     <style>
         html, body{
             height: 100vh;
@@ -22,9 +23,8 @@
             "content content content content"
             "footer footer footer footer";
             background: linear-gradient(white,#B2B9DB);
-            /* background: whitesmoke; */
         }
-        .navbar{
+        /* .navbar{
             grid-area: header;
             background-color: #404253;
         }
@@ -53,19 +53,16 @@
         .nav-items li a.active-page{
             background-color: #59AAA3;
             color: #231F20;
-        }
-        .nav-links{
-            /* align-self: flex-end; */
+        } */
+        /* .nav-links{
             color: whitesmoke;
             transition: 0.2s;
         }
         .nav-links:hover{
             cursor: pointer;
-            /* transition-delay: 0.2s; */
-            /* background-color:#88A5BF; */
             background-color: #59AAA3;
             color: black;
-        }
+        } */
 
         /* .middle-content{
             display: grid;
