--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
+    <link rel="stylesheet" href="../style.css">
     <style>
         html, body{
             height: 100vh;
@@ -22,19 +23,14 @@
             "footer footer footer footer";
             background: linear-gradient(white,#B2B9DB);
         }
-        .navbar{
+        /* .navbar{
             grid-area: header;
             background-color: black;
         }
 
-        /* .content-box{
-            grid-area: content;
-            background: whitesmoke;
-        } */
         .footer-box{
             grid-area: footer;
             background-color:black;
-            color: #63A1F2;
         }
 
         .nav-items{
@@ -51,22 +47,19 @@
             font-family: 'Roboto', sans-serif;
             text-decoration: none;
             color: white;
-        }
-        .nav-links{
-            /* align-self: flex-end; */
+        } */
+        /* .nav-links{
             transition: 0.2s;
         }
         .nav-links:hover{
             cursor: pointer;
-            /* transition-delay: 0.2s; */
-            /* background-color:#88A5BF; */
             background-color: #59AAA3;
             color: black;
         }
         .nav-items li a.active-page{
             background-color: #59AAA3;
             color:  #231F20;
-        }
+        } */
         .heading-content{
             text-align: center;
             font-size: 50px;
