fonts and about me responsive

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -115,15 +115,7 @@
             /* font-family: 'Ephesis', cursive; */
             /* font-weight: thin; */
         }
-       
-        .description{
-            /* font-family: 'Roboto', sans-serif; */
-            font-family: 'Encode Sans Semi Condensed', sans-serif;
-            /* font-weight: lighter; */
-            font-size: 18px;
-            /* font-size: larger; */
-            text-align: center;
-        }
+    
 
         .content{
             font-family: 'Roboto', sans-serif;
@@ -202,10 +194,10 @@
     <div class="wrapper">
         <div class="navbar">
             <ul class="nav-items">
-                <li class="nav-links"><a href="../index.html"  >About Me</a></li>
-                <li class="nav-links"><a href="./projects.html" class='active-page' >Projects</a></li>
-                <li class="nav-links"><a href="./contact.html">Contact</a></li>
-                <li class="nav-links"><a href="./blog.html" >Blog</a></li>
+                <li><a class="nav-links" href="../index.html"  >About Me</a></li>
+                <li><a  class="nav-links" href="./projects.html" >Projects</a></li>
+                <li><a class="nav-links" href="./contact.html">Contact</a></li>
+                <li><a class="nav-links active-page" href="./blog.html" >Blog</a></li>
             </ul>
         </div>
         <div class="project-box">
@@ -219,7 +211,7 @@
                             <img src="../img/shiamak_winter_funk.jpeg" alt="">
                         </div>
                         <div class="card-content">
-                            <h5 class="description">Dance!</h5>
+                            <h5 class="description card-description">Dance!</h5>
                             <p class="content">One of my favorite hobbies is Bollywood Dance!</p>
                         </div>
                     </div>
@@ -231,7 +223,7 @@
                             <img src="../img/olympic_NP.jpeg" alt="">
                         </div>
                         <div class="card-content">
-                            <h5 class="description">Travelling</h5>
+                            <h5 class="description card-description">Travelling</h5>
                             <p class="content"></p>
                         </div>
                     </div>
@@ -243,7 +235,7 @@
                             <img src="../img/jewelry_made.jpeg" alt="">
                         </div>
                         <div class="card-content">
-                            <h5 class="description">Jewelry Making</h5>
+                            <h5 class="description card-description">Jewelry Making</h5>
                             <p class="content">I'm intrigued by DIY jewelry! Though I'm a novice, I thoroughly enjoy trying out various designs. Here's a 
                                 photo of me wearing a necklace I made by weaving black and white beads. My inspiration for ideas - PINTEREST of course!
                             </p>
@@ -257,7 +249,7 @@
                             <img src="../img/coffee.png" alt="">
                         </div>
                         <div class="card-content">
-                            <h5 class="description">Coffee</h5>
+                            <h5 class="description card-description">Coffee</h5>
                             <p class="content">I love coffee (read addict)!</p>
                         </div>
                     </div>
