--- a/pages/projects.html
+++ b/pages/projects.html
@@ -115,15 +115,6 @@
             /* font-family: 'Ephesis', cursive; */
             /* font-weight: thin; */
         }
-       
-        .description{
-            /* font-family: 'Roboto', sans-serif; */
-            font-family: 'Encode Sans Semi Condensed', sans-serif;
-            /* font-weight: lighter; */
-            font-size: 18px;
-            /* font-size: larger; */
-            text-align: center;
-        }
 
         .content{
             font-family: 'Roboto', sans-serif;
@@ -200,10 +191,10 @@
     <div class="wrapper">
         <div class="navbar">
             <ul class="nav-items">
-                <li class="nav-links"><a href="../index.html"  >About Me</a></li>
-                <li class="nav-links"><a href="./projects.html" class='active-page' >Projects</a></li>
-                <li class="nav-links"><a href="./contact.html">Contact</a></li>
-                <li class="nav-links"><a href="./blog.html" >Blog</a></li>
+                <li><a class="nav-links" href="../index.html">About Me</a></li>
+                <li><a class="nav-links active-page" href="./projects.html" >Projects</a></li>
+                <li><a class="nav-links" href="./contact.html">Contact</a></li>
+                <li><a class="nav-links" href="./blog.html" >Blog</a></li>
             </ul>
         </div>
         <div class="project-box">
@@ -215,7 +206,7 @@
                             <img src="../img/othello_game.png" alt="">
                         </div>
                         <div class="card-content">
-                            <h5 class="description">Othello Game</h5>
+                            <h5 class="description card-description">Othello Game</h5>
                             <p class="content">Classic Othello game implemented in Python and Processing library with basic AI heuristic.</p>
                         </div>
                     </div>
@@ -227,7 +218,7 @@
                             <img src="../img/java8.png" alt="">
                         </div>
                         <div class="card-content">
-                            <h5 class="description">CS 5004 Group Project</h5>
+                            <h5 class="description card-description">CS 5004 Group Project</h5>
                             <p class="content">Collaborated in a team of 3 peers for developing an
                                 property booking system using Object Oriented Design principles in Java</p>
                         </div>
@@ -240,7 +231,7 @@
                             <img src="../img/pup_target_game.png" alt="">
                         </div>
                         <div class="card-content">
-                            <h5 class="description">Pup Target</h5>
+                            <h5 class="description card-description">Pup Target</h5>
                             <p class="content"> Single player multi-level game using HTML/CSS, jQuery.</p>
                         </div>
                     </div>
@@ -252,7 +243,7 @@
                             <img src="../img/kw.png" alt="">
                         </div>
                         <div class="card-content">
-                            <h5 class="description">Kitchen Wonders</h5>
+                            <h5 class="description card-description">Kitchen Wonders</h5>
                             <p class="content"> Kitchen Wonders: Online food ordering system by home-chefs built as part of
                             project in WDI-sg Bootcamp at GA.</p>
                         </div>
