--- a/pages/contact.html
+++ b/pages/contact.html
@@ -173,10 +173,10 @@
         <div class="navbar">
             <div class="navbar">
                 <ul class="nav-items">
-                    <li class="nav-links"><a href="../index.html"  >About Me</a></li>
-                    <li class="nav-links"><a href="./projects.html" >Projects</a></li>
-                    <li class="nav-links"><a href="./contact.html" class='active-page'>Contact</a></li>
-                    <li class="nav-links"><a href="./blog.html" >Blog</a></li>
+                    <li><a class="nav-links" href="../index.html"  >About Me</a></li>
+                    <li><a class="nav-links" href="./projects.html" >Projects</a></li>
+                    <li><a class="nav-links active-page" href="./contact.html">Contact</a></li>
+                    <li><a class="nav-links" href="./blog.html" >Blog</a></li>
                 </ul>
         </div>
         </div>
