--- a/index.html
+++ b/index.html
@@ -191,11 +191,8 @@
                     </div>
                 </div>
         <div class="photo-box">
-            <!-- <img src="./img/me.jpeg" alt="profile_pic"> -->
         </div>
-
-
-        <div class="footer-box">3</div>
+        <div class="footer-box"></div>
     </div>
 </body>
 </html>
