--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,11 +7,6 @@
     <title>My portfolio</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-        html, body{
-            height: 100vh;
-            margin: 0px;
-            padding: 0px;
-        }
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Italiana&family=Lato&family=Roboto&display=swap');
         .wrapper{
             height: 100%;
@@ -89,34 +84,6 @@
             /* font-family: 'Montserrat', sans-serif; */
         }
 
-        .heading-content{
-            text-align: center;
-            font-size: 50px;
-            /* color: 28364C; */
-            /* color: black; */
-            color: #231F20;
-            /* color: #025949; */
-            /* text-shadow: 2px 2px 5px#59AAA3; */
-            letter-spacing: 6px;
-            text-transform: uppercase;
-            font-family: 'Encode Sans Semi Condensed', sans-serif;
-            /* font-family: 'Ephesis', cursive; */
-            font-weight: lighter;
-            margin: 0px;
-            /* font-family: 'Italiana', serif; */
-        }
-
-        .sub-heading{
-            text-align: center;
-            font-size: 32px;
-            color: #231F20;
-            font-family: 'Encode Sans Semi Condensed', sans-serif;
-            font-weight: lighter;
-            /* font-family: 'Ephesis', cursive; */
-            /* font-weight: thin; */
-        }
-    
-
         .content{
             font-family: 'Roboto', sans-serif;
             font-weight: thin;
@@ -193,6 +160,7 @@
 <body>
     <div class="wrapper">
         <div class="navbar">
+            <h1 class="heading-content">Sruti Keerti</h1>
             <ul class="nav-items">
                 <li><a class="nav-links" href="../index.html"  >About Me</a></li>
                 <li><a  class="nav-links" href="./projects.html" >Projects</a></li>
