--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,64 +23,7 @@
             "footer footer footer footer";
             background: linear-gradient(white,#B2B9DB);
         }
-        /* .navbar{
-            grid-area: header;
-            background-color: black;
-        }
 
-        .footer-box{
-            grid-area: footer;
-            background-color:black;
-        }
-
-        .nav-items{
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-        }
-        .nav-items li{
-            display: inline-block;
-            margin: 0 2em 0 2em;
-        }
-
-        .nav-items li a{
-            font-family: 'Roboto', sans-serif;
-            text-decoration: none;
-            color: white;
-        } */
-        /* .nav-links{
-            transition: 0.2s;
-        }
-        .nav-links:hover{
-            cursor: pointer;
-            background-color: #59AAA3;
-            color: black;
-        }
-        .nav-items li a.active-page{
-            background-color: #59AAA3;
-            color:  #231F20;
-        } */
-        .heading-content{
-            text-align: center;
-            font-size: 50px;
-            /* color: 28364C; */
-            /* color: black; */
-            color: #231F20;
-            font-family: 'Encode Sans Semi Condensed', sans-serif;
-            /* font-family: 'Ephesis', cursive; */
-            font-weight: lighter;
-            /* font-family: 'Italiana', serif; */
-        }
-
-        .sub-heading{
-            text-align: center;
-            /* font-size: 32px; */
-            color: #231F20;
-            font-family: 'Encode Sans Semi Condensed', sans-serif;
-            font-weight: lighter;
-            /* font-family: 'Ephesis', cursive; */
-            /* font-weight: thin; */
-        }
         .location-box{
             grid-area: sidebar;
             border: 1px solid #28364C;
@@ -102,11 +45,6 @@
             flex-direction: column;
             flex-wrap: nowrap;
             justify-content: flex-start;
-            /* background-color: ; */
-
-            /* background: linear-gradient(transparent,#EEECFF); */
-            
-            /* border: 1px solid #63A1F2; */
         }
         .contact-items{
             display: flex;
@@ -171,49 +109,48 @@
     <div class="wrapper">
 
         <div class="navbar">
-            <div class="navbar">
-                <ul class="nav-items">
-                    <li><a class="nav-links" href="../index.html"  >About Me</a></li>
-                    <li><a class="nav-links" href="./projects.html" >Projects</a></li>
-                    <li><a class="nav-links active-page" href="./contact.html">Contact</a></li>
-                    <li><a class="nav-links" href="./blog.html" >Blog</a></li>
-                </ul>
-        </div>
+            <h1 class="heading-content">Sruti Keerti</h1>
+            <ul class="nav-items">
+                <li><a class="nav-links" href="../index.html"  >About Me</a></li>
+                <li><a class="nav-links" href="./projects.html" >Projects</a></li>
+                <li><a class="nav-links active-page" href="./contact.html">Contact</a></li>
+                <li><a class="nav-links" href="./blog.html" >Blog</a></li>
+            </ul>
         </div>
 
         <div class="name-box">
-            <h2 class="heading-content">Get in touch</h2>
+            <h2 class="sub-heading">Get in touch</h2>
             <div class="contact-items">
                 <div class="contact-box">
                     <img class="gmail" src="../img/gmail.png" alt="">
                     <div class="card-box gmail-box">
-                        <h3 class="sub-heading">skeerti2@gmail.com</h3>
+                        <p class="description">skeerti2@gmail.com</p>
                     </div>
                 </div>
                 <div class="contact-box">
                     <img src="../img/linkedin.png" alt="">
                     <div class="card-box linkedin-box">
-                        <h3 class="sub-heading">https://www.linkedin.com/in/sruti-keerti/
-                        </h3>
+                        <p class="description">https://www.linkedin.com/in/sruti-keerti/
+                        </p>
                     </div>
                 </div>
                 <div class="contact-box"><img src="../img/outlook.png" alt="">
                     <div class="card-box outlook-box" >
-                        <h3 class="sub-heading">munukutla.s@northeastern.edu
-                        </h3>
+                        <p class="description">munukutla.s@northeastern.edu
+                        </p>
                     </div>
                 </div>
                 <div class="contact-box"><img src="../img/instagram.png" alt="">
                     <div class="card-box insta-box">
-                        <h3 class="sub-heading">https://www.instagram.com/peppykeerti/
-                        </h3>
+                        <p class="description">https://www.instagram.com/peppykeerti/
+                        </p>
                     </div>
                 </div>
                 <div class="contact-box"><img src="../img/facebook.png" alt="">
                     <div class="card-box fb-box">
-                        <h3 class="sub-heading">
+                        <p class="description">
                             https://www.facebook.com/peppykeerti
-                        </h3>
+                        </p>
                     </div>
                 </div>
             </div>
