--- a/pages/projects.html
+++ b/pages/projects.html
@@ -89,33 +89,6 @@
             /* font-family: 'Montserrat', sans-serif; */
         }
 
-        .heading-content{
-            text-align: center;
-            font-size: 50px;
-            /* color: 28364C; */
-            /* color: black; */
-            color: #231F20;
-            /* color: #025949; */
-            /* text-shadow: 2px 2px 5px#59AAA3; */
-            letter-spacing: 6px;
-            text-transform: uppercase;
-            font-family: 'Encode Sans Semi Condensed', sans-serif;
-            /* font-family: 'Ephesis', cursive; */
-            font-weight: lighter;
-            margin: 0px;
-            /* font-family: 'Italiana', serif; */
-        }
-
-        .sub-heading{
-            text-align: center;
-            font-size: 32px;
-            color: #231F20;
-            font-family: 'Encode Sans Semi Condensed', sans-serif;
-            font-weight: lighter;
-            /* font-family: 'Ephesis', cursive; */
-            /* font-weight: thin; */
-        }
-
         .content{
             font-family: 'Roboto', sans-serif;
             font-weight: thin;
@@ -180,16 +153,31 @@
         .card:hover .card{
             background-color:#96D4E3;
             opacity: 0.2;
-;
         }
+        
         /*.card:hover .hide{
             display: contents; */
         /* } */
+
+    @media only screen and (max-width: 600px) {
+        .card-items{
+            flex-flow: column nowrap;
+            justify-content: center;
+            width: 95%;
+            align-items: center;
+        }
+        .card{
+            height: 40%;
+            max-width: 98%;
+        }
+        
+    }
     </style>
 </head>
 <body>
     <div class="wrapper">
         <div class="navbar">
+            <h1 class="heading-content">Sruti Keerti</h1>
             <ul class="nav-items">
                 <li><a class="nav-links" href="../index.html">About Me</a></li>
                 <li><a class="nav-links active-page" href="./projects.html" >Projects</a></li>
