progress added responsive blog website done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         "header header header header"
         "content content sidebar sidebar"
         "footer footer footer footer";
-        background: linear-gradient(white,#B2B9DB);
     }
 
     @media only screen and (max-width: 600px) {
@@ -27,10 +26,9 @@
         grid-template-rows: 0.5fr 2fr 2fr 0.2fr;
         grid-template-areas:
         "header header header header"
-        "sidebar sidebar sidebar sidebar"
         "content content content content"
+        "sidebar sidebar sidebar sidebar"
         "footer footer footer footer";
-        background: linear-gradient(white,#B2B9DB);
         }
     }
         /* .middle-content{
@@ -47,6 +45,7 @@
             flex-direction: column;
             flex-wrap: nowrap;
             justify-content:center;
+            padding: 2%;;
             /* background-color: ; */
 
             /* background: linear-gradient(transparent,#EEECFF); */
