--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,11 +7,6 @@
     <title>My portfolio</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-        html, body{
-            height: 100vh;
-            margin: 0px;
-            padding: 0px;
-        }
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Italiana&family=Lato&family=Roboto&display=swap');
         .wrapper{
             height: 100%;
@@ -123,6 +118,7 @@
         
 
         .card-content{
+            /* padding: 2%; */
             flex: 2;
             text-align: center;
             align-self: center;
@@ -159,6 +155,20 @@
         /* } */
 
     @media only screen and (max-width: 600px) {
+        .card-items{
+            flex-flow: column nowrap;
+            justify-content: center;
+            width: 95%;
+            align-items: center;
+        }
+        .card{
+            height: 40%;
+            max-width: 98%;
+        }
+        
+    }
+
+    @media only screen and (max-width: 720px) {
         .card-items{
             flex-flow: column nowrap;
             justify-content: center;
@@ -244,7 +254,7 @@
                 </div> -->
             </div>
         </div>
-        <div class="footer-box">3</div>
+        <div class="footer-box"></div>
     </div>
 </body>
 </html>
