--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,11 +28,6 @@
             width: 100%;
         }
 
-        /* .description{
-            font-family: 'Roboto', sans-serif;
-            font-size: larger;
-            text-align: center;
-        } */
         .name-box{
             grid-area: content;
             display: flex;
@@ -43,7 +38,6 @@
         .contact-items{
             display: flex;
             flex-flow: column nowrap;
-            /* justify-content: center; */
             row-gap: 20px;
             width: 80%;
             margin: auto;
@@ -58,39 +52,23 @@
         }
 
         .contact-box img{
-            /* position: absolute; */
-            /* top:0; */
             width: 60px;
             height: 60px;
             max-width: 100%;
             max-width: 100%;
             object-fit: contain;
-            /* float: left; */
-            /* padding: 5px; */
         }
 
         .card-box{
-            /* float: right; */
-            /* margin-top: 0; */
-            /* margin-left: auto; */
-            /* background-color: whitesmoke; */
             border-radius: 10px;
+            margin: 0 auto;
             height: auto;
-            width: auto;
-            /* display: inline; */
-            /* width: 100%; */
-            /* height: 100%; */
-            /* margin-top: 20%; */
-            /* width: 80%; */
-            /* height: 20%; */
-            /* border-radius: 10px; */
-            /* background-color: whitesmoke; */
             align-self: center;
             text-align: center;
             visibility: hidden;
         }
 
-        .card-box > *{
+        .description > a{
             text-decoration: none;
         }
 
@@ -120,6 +98,28 @@
         "content content content content"
         "sidebar sidebar sidebar sidebar"
         "footer footer footer footer";
+        }
+
+        .location-box{
+            margin-top: 5%;
+        }
+    }
+
+    @media (min-width: 600px) and (max-width: 768px) {
+        .wrapper{
+        height: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 0.5fr 2fr 2fr 0.2fr;
+        grid-template-areas:
+        "header header header header"
+        "content content content content"
+        "sidebar sidebar sidebar sidebar"
+        "footer footer footer footer";
+        }
+
+        .location-box{
+            margin-top: 5%;
         }
     }
         
@@ -164,7 +164,8 @@
                 </div>
                 <div class="contact-box"><img src="../img/instagram.png" alt="">
                     <div class="card-box insta-box">
-                        <p class="description"><a href="https://www.instagram.com/peppykeerti/">instagram.com/peppykeerti/</a>
+                        <p class="description">
+                            <a href="https://www.instagram.com/peppykeerti/">instagram.com/peppykeerti/</a>
                         </p>
                     </div>
                 </div>
@@ -176,8 +177,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="card-box"> -->
-            <!-- </div> -->
         </div> 
 
         <div class="location-box">
