--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,12 +48,11 @@
             height: 60px;
             display: flex;
             flex-wrap: nowrap;
-            column-gap: 5%;
         }
 
         .contact-box img{
-            width: 60px;
-            height: 60px;
+            width: 50px;
+            height: 50px;
             max-width: 100%;
             max-width: 100%;
             object-fit: contain;
@@ -62,7 +61,6 @@
         .card-box{
             border-radius: 10px;
             margin: 0 auto;
-            height: auto;
             align-self: center;
             text-align: center;
             visibility: hidden;
@@ -117,6 +115,10 @@
         "sidebar sidebar sidebar sidebar"
         "footer footer footer footer";
         }
+
+        /* .description{
+            font-size: x-small;
+        } */
 
         .location-box{
             margin-top: 5%;
