nav links changed

--- a/contact/index.html
+++ b/contact/index.html
@@ -134,9 +134,9 @@
             <h1 class="heading-content">Sruti Keerti</h1>
             <ul class="nav-items">
                 <li><a class="nav-links" href="../index.html"  >About Me</a></li>
-                <li><a class="nav-links" href="./projects.html" >Projects</a></li>
-                <li><a class="nav-links active-page" href="./contact.html">Contact</a></li>
-                <li><a class="nav-links" href="./blog.html" >Blog</a></li>
+                <li><a class="nav-links" href="../projects/" >Projects</a></li>
+                <li><a class="nav-links active-page" href="#">Contact</a></li>
+                <li><a class="nav-links" href="../blog/" >Blog</a></li>
             </ul>
         </div>
 
