--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
         <div class="navbar">
             <h1 class="heading-content">Sruti Keerti</h1>
             <ul class="nav-items">
-                <li><a class="nav-links active-page" href="./index.html" >About Me</a></li>
-                <li><a class="nav-links" href="./pages/projects.html" >Projects</a></li>
-                <li ><a class="nav-links" href="./pages/contact.html">Contact</a></li>
-                <li ><a class="nav-links" href="./pages/blog.html" >Blog</a></li>
+                <li><a class="nav-links active-page" href="#" >About Me</a></li>
+                <li><a class="nav-links" href="./projects/" >Projects</a></li>
+                <li ><a class="nav-links" href="./contact/">Contact</a></li>
+                <li ><a class="nav-links" href="./blog/" >Blog</a></li>
             </ul>
         </div>
 
