--- a/projects/index.html
+++ b/projects/index.html
@@ -146,9 +146,9 @@
             <h1 class="heading-content">Sruti Keerti</h1>
             <ul class="nav-items">
                 <li><a class="nav-links" href="../index.html">About Me</a></li>
-                <li><a class="nav-links active-page" href="./projects.html" >Projects</a></li>
-                <li><a class="nav-links" href="./contact.html">Contact</a></li>
-                <li><a class="nav-links" href="./blog.html" >Blog</a></li>
+                <li><a class="nav-links active-page" href="#" >Projects</a></li>
+                <li><a class="nav-links" href="../contact/">Contact</a></li>
+                <li><a class="nav-links" href="../blog/" >Blog</a></li>
             </ul>
         </div>
         <div class="project-box">
